--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.application.name=service-repo
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.datasource.url=jdbc:postgresql://localhost:5433/hibernate_db
-spring.datasource.url=jdbc:postgresql://db:5432/hibernate_db
+spring.datasource.url=database-1.ccvuc8i0o4p9.us-east-1.rds.amazonaws.com/hibernate_db
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=byGHHVkrwh5jRHxHJCbG
 
 # Optional:
 spring.jpa.hibernate.ddl-auto=update
