--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=service-repo
 
+server.port=8081
+
 #spring.datasource.url=jdbc:postgresql://localhost:5433/hibernate_db
 #spring.datasource.username=postgres
 #spring.datasource.password=root
