--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,19 +2,19 @@ spring.application.name=service-repo
 
 server.port=8081
 
-#spring.datasource.url=jdbc:postgresql://localhost:5433/hibernate_db
-#spring.datasource.username=postgres
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#
+spring.datasource.url=jdbc:postgresql://localhost:5432/hibernate_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.datasource.url=jdbc:postgresql://localhost:5433/hibernate_db
-spring.datasource.url=jdbc:postgresql://database-1.ccvuc8i0o4p9.us-east-1.rds.amazonaws.com:5432/hibernate_db
-spring.datasource.username=postgres
-spring.datasource.password=byGHHVkrwh5jRHxHJCbG
+# spring.datasource.url=jdbc:postgresql://database-1.ccvuc8i0o4p9.us-east-1.rds.amazonaws.com:5432/hibernate_db
+# spring.datasource.username=postgres
+# spring.datasource.password=byGHHVkrwh5jRHxHJCbG
 
 # Optional:
 spring.jpa.hibernate.ddl-auto=update
